# tcc

./: .gitignore  Main.SchDoc  README.md  comunicacao.SchDoc  cond_sinais.SchDoc  controlador.SchDoc  dps.SchDoc  perifericos.SchDoc  power_supply.SchDoc  seccionamento.SchDoc  tcc_semsf.PrjPcb
__Previews/: cond_sinais.SchDocPreview  power_supply.SchDocPreview
firmware/: CMakeLists.txt  sdkconfig.old
firmware/coleta_dados/: firmware.txt
firmware/components/: button.c  generic_digital_output.c  mqtt_config.c  mqtt_subscriber_relay_1.c  structures.c  wifi.c
firmware/components/include/: button.h  events.h  generic_digital_output.h  main.h  mqtt.h  wifi.h
firmware/comunicacao/: Makefile  README.md
firmware/comunicacao/components/: .cproject  CMakeLists.txt  events.c  mqtt_publish_data.c  mqtt_publish_state.c  mqtt_subscriber_relay_2.c  uart.c
firmware/comunicacao/components/include/: structures.h  uart.h
firmware/comunicacao/main/: main.c
hardware/pcb_coleta_dados/: README.md  cond_sinais.SchDoc  perifericos.SchDoc  power_supply.SchDoc  tcc_semsf.PrjPcb
hardware/pcb_coleta_dados/__Previews/: power_supply.SchDocPreview
hardware/pcb_comunicacao/: Main.PcbDoc  Main.SchDoc  tcc_semsf_com.OutJob  tcc_semsf_com.PrjPcb
hardware/pcb_comunicacao/Project Outputs for tcc_semsf_com/: Design Rule Check - Main.drc  (+1 more)
software/: docker-compose.yml
software/node-red/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .flows.json.backup  .flows_cred.json.backup  flows.json  flows_cred.json  package-lock.json  package.json
(+14 files in other folders)
